<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".activities.WelcomeActivity"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="?attr/colorBackground">

  <Button
    android:id="@+id/welcome_button_themeDark"
    android:layout_width="90dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:text="@string/welcome_button_themeDark"
    app:layout_constraintBottom_toTopOf="@+id/welcome_button_themeLight"
    app:layout_constraintEnd_toEndOf="parent" />

  <Button
    android:id="@+id/welcome_button_themeLight"
    android:layout_width="90dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:text="@string/welcome_button_themeLight"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />

  <TextView
    android:id="@+id/welcome_textView_welcomeMessage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome_textView_welcomeMessage"
    android:textSize="24sp"
    android:textColor="?attr/colorText"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
