<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/itemView_textView_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:lines="2"
        android:text="@string/itemView_textView_heading"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/itemView_textView_description"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemView_textView_description"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/itemView_textView_description"
        app:layout_constraintBottom_toTopOf="@+id/itemView_textView_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemView_textView_heading"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemView_textView_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/itemView_textView_phone"
        app:layout_constraintBottom_toTopOf="@id/itemView_textView_date"
        app:layout_constraintStart_toStartOf="@+id/itemView_textView_description"
        app:layout_constraintTop_toBottomOf="@id/itemView_textView_description" />

    <TextView
        android:id="@+id/itemView_textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/itemView_textView_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/itemView_textView_description"
        app:layout_constraintTop_toBottomOf="@id/itemView_textView_phone" />
</androidx.constraintlayout.widget.ConstraintLayout>