<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SearchActivity">

    <TextView
        android:id="@+id/search_textView_searchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/search_editText_searchQuery"
        android:text="@string/search_textView_searchLabel"
        app:layout_constraintBottom_toTopOf="@id/search_editText_searchQuery"
        app:layout_constraintStart_toStartOf="@id/search_editText_searchQuery"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_editText_searchQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Heading"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/search_button_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_textView_searchLabel" />

    <Button
        android:id="@+id/search_button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_button_cancel"
        app:layout_constraintTop_toBottomOf="@id/search_editText_searchQuery" />

    <Button
        android:id="@+id/search_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button_cancel"
        app:layout_constraintBaseline_toBaselineOf="@id/search_button_search"
        app:layout_constraintEnd_toStartOf="@id/search_button_search"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>